[FEAT] enlv1s2c3jy1 로직 구현